@@ -144,9 +144,6 @@ public class Const {
     public final static int HAM_READ_ONLY                       =    0x004;
 
     /** Flag for Database.create() */
-    public final static int HAM_USE_BTREE                       =    0x010;
-
-    /** Flag for Database.create() */
     public final static int HAM_DISABLE_VAR_KEYLEN              =    0x040;
 
     /** Flag for Database.create() */
