@@ -321,7 +321,6 @@ format_flags(char *flagstr) {
     else COMPARE_FLAG(HAM_ENABLE_RECOVERY);
     else COMPARE_FLAG(HAM_ENABLE_TRANSACTIONS);
     else COMPARE_FLAG(HAM_READ_ONLY);
-    else COMPARE_FLAG(HAM_USE_BTREE);
     else COMPARE_FLAG(HAM_DISABLE_VAR_KEYLEN);
     else COMPARE_FLAG(HAM_ENABLE_DUPLICATES);
     else COMPARE_FLAG(HAM_RECORD_NUMBER);
